--- a/ChoreographyHive/config.cfg
+++ b/ChoreographyHive/config.cfg
@@ -7,22 +7,21 @@ looks_config = ./appearance.cfg
 python_file = ./empty_bot.py
 
 # Name of the bot in-game
-name = Choreo
+name = Virx
 
 [Details]
 # These values are optional but useful metadata for helper programs
 # Name of the bot's creator/developer
-developer = The RLBot community
+developer = VirxEC
 
 # Short description of the bot
-description = This is a multi-line description
-    of the official python example bot.
+description = Hivemind bot that was used in Rocket Sledge's AirShow 2!
 
 # Fun fact about the bot
 fun_fact = Banned from most tournaments!
 
 # Link to github repository
-github = https://github.com/tarehart/RLBotChoreography
+github = https://github.com/VirxEC/RLBotChoreography
 
 # Programming language
-language = python
+language = Python 3
