--- a/ChoreographyHive/rlbot.cfg
+++ b/ChoreographyHive/rlbot.cfg
@@ -6,9 +6,11 @@
 
 [Match Configuration]
 # Number of bots/players which will be spawned.  We support up to max 10.
-num_participants = 1
+num_participants = 32
 game_mode = Soccer
 game_map = Mannfield_Night
+enable_state_setting = True
+start_without_countdown = True
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
