--- a/ChoreographyHive/rlbot.cfg
+++ b/ChoreographyHive/rlbot.cfg
@@ -14,8 +14,8 @@ start_without_countdown = True
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
-Match Length = Unlimited
 Boost Amount = Unlimited
+Max Score = 1 Goal
 
 [Participant Configuration]
 participant_config_0 = config.cfg
